2011-12-08  Richard Guenther  <rguenther@suse.de>

	PR lto/50747
	* g++.dg/opt/pr50747-1_0.C: New testcase.
	* g++.dg/opt/pr50747-2_0.C: Likewise.

2011-12-08  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/execute/20111208-1.c: New test.

2011-12-08  Richard Guenther  <rguenther@suse.de>

	PR lto/48437
	* gcc.dg/lto/20111207-2_0.c: New testcase.
	* gcc.dg/guality/pr48437.c: Likewise.

2011-12-07  Jakub Jelinek  <jakub@redhat.com>

	PR c++/51401
	* g++.dg/cpp0x/auto7.C: Adjust expected error message.
	* g++.dg/cpp0x/auto29.C: New test.

	PR c++/51429
	* g++.dg/parse/error45.C: New test.

	PR c++/51229
	* g++.dg/ext/desig3.C: New test.

	PR c++/51369
	* g++.dg/cpp0x/constexpr-51369.C: New test.

2011-12-07  Andrew Pinski  <apinski@cavium.com>

	PR middle-end/45416
	* gcc.dg/pr45416.c: New testcase.

2011-12-07  Ed Smith-Rowland <3dw4rd@verizon.net>

	PR c++/51420
	* g++.dg/cpp0x/pr51420.C: New.

2011-12-07  Richard Guenther  <rguenther@suse.de>

	PR lto/48100
	* gcc.dg/lto/20111207-1_0.c: New testcase.
	* gcc.dg/lto/20111207-1_1.c: Likewise.
	* gcc.dg/lto/20111207-1_2.c: Likewise.
	* gcc.dg/lto/20111207-1_3.c: Likewise.

2011-12-07  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/50823
	* gcc.dg/torture/pr50823.c: New testcase.

2011-12-07  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/50744
	* gcc.dg/ipa/pr50744.c: New test.

2011-12-06  Jakub Jelinek  <jakub@redhat.com>

	PR c++/51430
	* g++.dg/template/static32.C: New test.

2011-12-06  Uros Bizjak  <ubizjak@gmail.com>

	* g++.dg/opt/pr51396.C: Use dg-additional-options.

2011-12-06  Tobias Burnus  <burnus@net-b.de>

	PR fortran/51435
	* gfortran.dg/default_initialization_5.f90: New.

2011-12-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/51354
	* gcc.c-torture/compile/pr51354.c: New test.

2011-12-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51431
	* g++.dg/other/abstract3.C: New.

2011-12-06  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/49997