@@ -1,3 +1,9 @@
+2011-12-08  Georg-Johann Lay  <avr@gjlay.de>
+
+	PR tree-optimization/51315
+	* gcc.c-torture/execute/20111208-1.c: Fix wrong assumption
+	sizeof(int)==4.
+
 2011-12-08  Richard Guenther  <rguenther@suse.de>
 
 	PR lto/50747
